--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,35 @@
-/home/ashfaq/.tmux.conf
+unbind C-b
+set-option -g prefix C-x
+set -g status-left-length 100
+bind-key C-x send-prefix
+
+# split panes using ] and -
+bind ] split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
+
+# cycle prev/next pane
+# bind -n M-j select-pane -t :.+
+# bind -n M-k select-pane -t :.-
+
+# set -g default-terminal "screen-256color-bce"
+set -g default-terminal "alacritty"
+bind -n M-h previous-window
+bind -n M-l next-window
+
+# switch sessions
+bind -n M-L switch-client -p
+bind -n M-H switch-client -n
+bind -n M-P switch-client -l
+
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# Enable session auto-save
+# set -g @continuum-restore 'on'
+
+set -g @resurrect-strategy-nvim 'session'
+
+# run '~/.tmux/plugins/tpm/tpm'
+run-shell /home/ashfaq/.tmux/tmux-resurrect/resurrect.tmux
