--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
 unbind C-b
 set-option -g prefix C-x
+set-option -g default-shell "/bin/zsh"
 set -g status-left-length 100
 bind-key C-x send-prefix
 
