--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 unbind C-b
 set-option -g prefix C-x
 set-option -g default-shell "/bin/zsh"
+set -g status on
 set -g status-left-length 100
 bind-key C-x send-prefix
 
@@ -32,5 +33,10 @@ bind -n M-P switch-client -l
 
 set -g @resurrect-strategy-nvim 'session'
 
+set -g @continuum-restore 'on'
+set -g status-right 'Continuum status: #{continuum_status}'
+set -g @continuum-save-interval '30'
+
 # run '~/.tmux/plugins/tpm/tpm'
 run-shell /home/ashfaq/.tmux/tmux-resurrect/resurrect.tmux
+run-shell /home/ashfaq/.tmux/tmux-continuum/continuum.tmux
