--- a/alacritty.yml
+++ b/alacritty.yml
@@ -257,6 +257,46 @@ schemes:
       # white:   '0xebdbb2'
       white:   '0xffffff'
 
+  # nightfly
+  nightfly: &nightfly
+    colors:
+      # Default colors
+      primary:
+        background:        '#011627'
+        foreground:        '#acb4c2'
+        bright_foreground: '#eeeeee'
+
+      # Cursor colors
+      cursor:
+        text:   '#080808'
+        cursor: '#9ca1aa'
+
+      # Selection colors
+      selection:
+        text:       '#080808'
+        background: '#b2ceee'
+
+      # Normal colors
+      normal:
+        black:   '#1d3b53'
+        red:     '#fc514e'
+        green:   '#a1cd5e'
+        yellow:  '#e3d18a'
+        blue:    '#82aaff'
+        magenta: '#c792ea'
+        cyan:    '#7fdbca'
+        white:   '#a1aab8'
+
+      # Bright colors
+      bright:
+        black:   '#7c8f8f'
+        red:     '#ff5874'
+        green:   '#21c7a8'
+        yellow:  '#ecc48d'
+        blue:    '#82aaff'
+        magenta: '#ae81ff'
+        cyan:    '#7fdbca'
+        white:   '#d6deeb'
   # Dracula
   dracula: &dracula
     primary:
@@ -313,7 +353,7 @@ schemes:
       white:   '#e6e6d1'
 
 # Colors (Tomorrow Night)
-# colors: *dracula
+# colors: *nightfly
   # Default colors
   #primary:
   #  background: '#1d1f21'
