--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,11 +25,11 @@ bind -n M-L switch-client -p
 bind -n M-H switch-client -n
 bind -n M-P switch-client -l
 
-# set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
-# Enable session auto-save
-# set -g @continuum-restore 'on'
 
 set -g @resurrect-strategy-nvim 'session'
 
@@ -38,5 +38,7 @@ set -g status-right 'Continuum status: #{continuum_status}'
 set -g @continuum-save-interval '30'
 
 # run '~/.tmux/plugins/tpm/tpm'
-run-shell /home/ashfaq/.tmux/tmux-resurrect/resurrect.tmux
-run-shell /home/ashfaq/.tmux/tmux-continuum/continuum.tmux
+# run-shell /home/ashfaq/.tmux/tmux-resurrect/resurrect.tmux
+# run-shell /home/ashfaq/.tmux/tmux-continuum/continuum.tmux
+
+run '~/.tmux/plugins/tpm/tpm'
