--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,8 +37,12 @@ set -g @continuum-restore 'on'
 set -g status-right 'Continuum status: #{continuum_status}'
 set -g @continuum-save-interval '30'
 
-# run '~/.tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tpm/tpm'
+run-shell /home/ashfaq/.tmux/plugins/tmux-resurrect/resurrect.tmux
+run-shell /home/ashfaq/.tmux/plugins/tmux-continuum/continuum.tmux
+run-shell /home/ashfaq/.tmux/plugins/tmux-sensible/sensible.tmux
+
 # run-shell /home/ashfaq/.tmux/tmux-resurrect/resurrect.tmux
 # run-shell /home/ashfaq/.tmux/tmux-continuum/continuum.tmux
 
-run '~/.tmux/plugins/tpm/tpm'
+# run '~/.tmux/plugins/tpm/tpm'
